jambeth: added concurrent testing capability in jambeth-pom.xml